# Roscco

./: CMakeLists.txt  README.md  package.xml
include/roscco/: oscc_to_ros.h  ros_to_oscc.h
launch/: roscco.launch.xml
oscc/api/include/: oscc.h
oscc/api/src/: oscc.c
src/: oscc_to_ros_node.cpp  ros_to_oscc.cpp  ros_to_oscc_node.cpp  roscco_executor.cpp
