<?xml version="1.0"?>
<package format="3">  
  <name>roscco</name>
  <version>0.0.0</version>
  <description>An OSCC to ROS interface</description>
  <maintainer email="support@polysync.io">PolySync</maintainer>
  <license>MIT</license>
  <url type="github">https://github.com/PolySync/roscco/</url>
  <author email="rbrown@polysync.io">Robert Brown</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>autoware_can_msgs</depend>
  <depend>roscco_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
